--- a/src/global.css
+++ b/src/global.css
@@ -8,7 +8,7 @@
   --animate-slide-up-out: slideUpOut 0.5s ease-in-out;
 
   --color-primary: #5356ff;
-  --color-secondary: #ffc947;
+  --color-secondary: #1def8b;
 }
 
 @layer components {
@@ -87,6 +87,7 @@ body {
 }
 ::-webkit-scrollbar {
   width: 8px;
+  height: 8px;
 }
 ::-webkit-scrollbar-track {
   background: transparent;
@@ -116,18 +117,20 @@ body {
 }
 
 @layer components {
-  .header-animate {
-    animation: reduce-header linear both;
-    animation-timeline: scroll();
-    animation-range: 0 150px;
-  }
-
-  @keyframes reduce-header {
-    to {
-      box-shadow: 0 5px 50px -5px hsla(0, 0%, 100%, 0.1),
-        0 0 0 1px hsla(0, 0%, 100%, 0.1);
-      background: rgba(25, 25, 25, 0.534);
-      backdrop-filter: blur(10px);
+  @keyframes reveal {
+      0% {
+        opacity: 0;
+        translate: 0 100px
+      }
+  
+      50% {
+        opacity: .1
+      }
+  
+      to {
+        opacity: 1;
+        translate: 0 0
+      }
     }
-  }
+
 }
