--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -2,6 +2,7 @@
 import CardArticle from "@/components/CardArticle.astro";
 import CardArticleBase from "@/components/CardArticleBase.astro";
 import Newsletter from "@/components/Newsletter.astro";
+import Topics from "@/components/Topics.astro";
 import Layout from "@/layouts/Layout.astro";
 import { getCollection, type CollectionEntry } from "astro:content";
 
@@ -17,38 +18,37 @@ const isNotPublished = await getCollection("blog", (entry) => entry.data.draft);
 
 <Layout title="blog">
   <main>
+    <Topics />
     <div class="hero flex md:flex-row flex-col min-h-dvh">
       <div class="flex-1">
-        <div class="grid md:grid-cols-2 grid-cols-1 gap-x-4 gap-y-10 row-auto">
+        <div class="flex flex-col gap-y-8">
           {
             isPublished.map((entry) => (
-              <CardArticle
-                class="first:md:col-span-2 first:md:min-h-[500px]"
-                {...entry}
-              />
+              <CardArticle orientation="horizontal" {...entry} />
             ))
           }
         </div>
       </div>
-      <aside class="md:w-2/5 w-full md:px-8">
+      <aside class="md:w-1/3 w-full md:px-8">
         <div class="md:pt-0 pt-12 pb-8">
           <small class="bg-primary px-3 py-1 rounded-full text-white">
             ¡Proximos articulos!
           </small>
         </div>
-        <ul>
+        <ul class="flex flex-col gap-y-3">
           {
             isNotPublished.length === 0 ? (
               <li>No hay proximo contanido</li>
             ) : (
               isNotPublished.map((entry) => (
                 <li class="opacity-80">
-                  <CardArticleBase {...entry} orientation="horizontal" />
+                  <CardArticleBase {...entry} orientation="minimal" />
                 </li>
               ))
             )
           }
         </ul>
+        <div></div>
       </aside>
     </div>
     <Newsletter />
