Refactor service pages and components for improved layout and styling, add gradient background support, and enhance accessibility features

--- a/src/components/Auth.astro
+++ b/src/components/Auth.astro
@@ -14,9 +14,11 @@ const { name, username, readingTime } = Astro.props;
   <div
     class="size-10 grid place-content-center bg-gradient-to-br from-primary to-secondary rounded-full"
   >
-    <span class="font-medium"> JB </span>
+    <span class="font-medium text-white"> JB </span>
   </div>
-  <div class="flex flex-col justify-center items-start font-medium text-white">
+  <div
+    class="flex flex-col justify-center items-start font-medium dark:text-white text-black"
+  >
     <strong set:text={name} />
     <div class="flex items-center flex-wrap gap-x-1">
       <small class="text-sm text-gray-400" set:text={username} />
