--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -9,7 +9,7 @@ const { title, description, extend = false } = Astro.props;
 
 <div
   class="rounded-lg pt-24 pb-12 mb-10 bg-center bg-cover"
-  style="background: var(--gradient);"
+  style="background: var(--gradient-secondary);"
 >
   <div
     class:list={[
