--- a/src/components/mdx/Aside.astro
+++ b/src/components/mdx/Aside.astro
@@ -20,22 +20,31 @@ let { type = "note", title } = Astro.props;
 <aside
   aria-label={title}
   class:list={[
-    "px-3 relative py-3 space-y-2 flex flex-col justify-center h-fit border-l-4 rounded-md not-prose",
+    "px-3 relative py-3 space-y-2 flex flex-col justify-center h-fit border rounded-md not-prose mb-3",
     {
-      "bg-primary border-l-indigo-300 text-blue-100": type === "note",
-      "bg-green-500 border-l-green-300 text-green-100": type === "tip",
-      "bg-yellow-500 border-l-yellow-300 text-yellow-100": type === "caution",
-      "bg-red-500 border-l-red-300 text-red-100": type === "danger",
+      "border-blue-600 bg-blue-50 text-blue-800 dark:border-blue-600 dark:bg-blue-950/20 dark:text-blue-100":
+        type == "note",
+      "border-purple-600 bg-purple-50 text-purple-800 dark:border-purple-600 dark:bg-purple-950/20 dark:text-purple-100":
+        type == "tip",
+
+      "border-amber-600 bg-amber-50 text-amber-800 dark:border-amber-600 dark:bg-amber-950/20 dark:text-amber-100":
+        type == "caution",
+
+      "border-red-600 bg-red-50 text-red-800 dark:border-red-600 dark:bg-red-950/20 dark:text-red-100":
+        type == "danger",
     },
   ]}
 >
-  <div class="text-xl flex items-center *:font-semibold" aria-hidden="true">
+  <div
+    class="text-xl flex items-center *:font-semibold capitalize"
+    aria-hidden="true"
+  >
     <Icon name={type == "note" ? "lightbulb" : "code"} class="size-6 mr-2" />
     <span>
       {title || types[type]}
     </span>
   </div>
-  <div class="text-white *:text-base">
+  <div class="*:text-base">
     <slot />
   </div>
 </aside>
