--- a/src/components/pages/About.astro
+++ b/src/components/pages/About.astro
@@ -24,7 +24,7 @@ const { Content } = entry[0];
       ¿Quien es Jeferson Barrero?
     </h3>
     <article
-      class="md:max-w-4xl mx-auto px-2 w-full prose-img:md:aspect-[3/2] prose-img:aspect-video prose-lg prose-img:object-cover prose-img:h-full prose prose-invert prose-h1:text-center prose-h1:py-10 prose-h1:text-4xl prose-h1:md:text-7xl"
+      class="md:max-w-4xl mx-auto px-2 w-full prose-img:md:aspect-[3/2] prose-img:aspect-video prose-lg prose-img:object-cover prose-img:h-full prose dark:prose-invert prose-h1:text-center prose-h1:py-10 prose-h1:text-4xl prose-h1:md:text-7xl"
     >
       <Content />
     </article>
