--- a/src/components/partials/Container.astro
+++ b/src/components/partials/Container.astro
@@ -27,9 +27,7 @@ const {
   ]}
   id={id}
 >
-  <div
-    class="flex md:flex-row flex-col items-start md:items-center justify-between px-2 pb-6"
-  >
+  <div class="flex md:flex-row flex-col items-start justify-between px-2 pb-6">
     <div class="container text-left md:max-w-2xl w-full mb-4 md:px-0">
       {
         tag && (
