--- a/src/components/partials/LastPosts.astro
+++ b/src/components/partials/LastPosts.astro
@@ -19,9 +19,7 @@ const posts = (await getCollection("blog", (entry) => !entry.data.draft))
   redirect="blog"
   redirectText="Ver todos"
 >
-  <div
-    class="grid lg:grid-cols-4 md:grid-cols-3 sm:grid-cols-2 grid-cols-1 gap-6"
-  >
+  <div class="grid md:grid-cols-2 grid-cols-1 gap-6">
     {posts.map((post) => <CardArticle {...post} />)}
   </div>
 </Container>
