--- a/src/components/CardPrimary.astro
+++ b/src/components/CardPrimary.astro
@@ -33,7 +33,7 @@ const { PLATFORM, DATE, TITLE, DESCRIPTION, ICON, LINK, index, custom } =
 
     <div class="flex gap-2 items-center justify-between mb-6">
       <div
-        class="size-10 rounded-lg bg-primary/20 border border-primary/30 flex items-center justify-center text-secondary group-hover:scale-110 transition-transform duration-300 relative overflow-hidden"
+        class="size-10 rounded-lg bg-primary/20 border border-primary/30 flex items-center justify-center dark:text-primary-forground text-primary group-hover:scale-110 transition-transform duration-300 relative overflow-hidden"
       >
         {
           ICON === "default" ? (
@@ -55,15 +55,22 @@ const { PLATFORM, DATE, TITLE, DESCRIPTION, ICON, LINK, index, custom } =
         }
       </div>
       <span
-        class="font-bold text-white flex-1"
+        class="font-medium dark:text-primary-forground text-primary flex-1"
         set:text={PLATFORM ? PLATFORM : TITLE}
       />
-      {DATE && <small class="text-white/60" set:text={DATE} />}
+      {
+        DATE && (
+          <small
+            class="dark:text-primary-forground text-primary text-pretty"
+            set:text={DATE}
+          />
+        )
+      }
     </div>
 
     {
       !!PLATFORM && (
-        <h3 class="text-xl font-bold mb-3 text-white group-hover:text-secondary transition-colors duration-300">
+        <h3 class="text-xl font-bold dark:text-white text-black text-pretty mb-3">
           {TITLE}
         </h3>
       )
@@ -72,8 +79,8 @@ const { PLATFORM, DATE, TITLE, DESCRIPTION, ICON, LINK, index, custom } =
 
     {
       LINK && (
-        <div class="mt-auto pt-4 relative">
-          <Link href={LINK} class="w-full rounded-lg" external>
+        <div class="mt-6 pt-4 relative">
+          <Link href={LINK} class="w-full" external>
             <span set:text={custom?.button} />
           </Link>
         </div>
