--- a/src/components/CardTestimony.astro
+++ b/src/components/CardTestimony.astro
@@ -10,7 +10,7 @@ const { name, position, text } = Astro.props;
 ---
 
 <article
-  class="p-5 bg-white/5 hover:bg-white/10 transition-colors ease-in-out border border-white/10 backdrop-blur-md rounded-2xl"
+  class="p-5 dark:bg-white/5 bg-black/5 dark:hover:bg-white/10 hover:bg-black/10 transition-colors ease-in-out border border-white/10 backdrop-blur-md rounded-2xl"
 >
   <header class="flex items-center gap-2.5">
     <div class="flex justify-center items-center">
@@ -24,7 +24,7 @@ const { name, position, text } = Astro.props;
         stroke-width="2"
         stroke-linecap="round"
         stroke-linejoin="round"
-        class="text-indigo-100"
+        class="dark:text-white text-black"
       >
         <path
           d="M16 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
@@ -37,9 +37,9 @@ const { name, position, text } = Astro.props;
       </svg>
     </div>
     <div class="flex flex-col">
-      <h3 class="text-white font-semibold" set:text={name} />
-      <small class="text-white/60" set:text={position} />
+      <h3 class="text-black dark:text-white font-semibold" set:text={name} />
+      <small class="text-black/60 dark:text-white/60" set:text={position} />
     </div>
   </header>
-  <p class="text-white/70 mt-2.5" set:text={text} />
+  <p class="text-black/70 dark:text-white/70 mt-2.5" set:text={text} />
 </article>
