--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -1,7 +1,7 @@
 ---
 import { Icon } from "astro-icon/components";
 export type Props = {
-  variant?: "primary" | "secondary" | "link";
+  variant?: "primary" | "secondary" | "link" | "gradient";
   href: string;
   external?: boolean;
   icon?: string;
@@ -26,8 +26,11 @@ const {
     { "w-full md:px-4": wfull },
     { "w-fit": !wfull },
     {
-      "bg-black/30 hover:bg-black/10 border border-white/20 text-white/80 hover:text-white transition-opacity":
+      "text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 font-medium rounded-full text-sm px-5 py-2.5 me-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700":
         variant === "primary",
+
+      "text-white bg-gradient-to-r from-cyan-500 to-blue-500 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-cyan-300 dark:focus:ring-cyan-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center":
+        variant === "gradient",
     },
     {
       "bg-secondary text-black py-2 transitio ease-in-out hover:shadow-white/20 hover:shadow-2xl":
