--- a/src/components/ListItem.astro
+++ b/src/components/ListItem.astro
@@ -51,7 +51,7 @@ const {
       class={`md:w-1/2 ${index % 2 === 0 ? "md:text-right md:pr-8" : "md:pl-8"} mb-4 md:mb-0`}
     >
       <span
-        class="inline-block bg-primary/20 text-[#dff5ff] px-3 py-1 rounded-full text-sm border border-primary/30"
+        class="inline-block font-medium dark:bg-primary dark:text-primary-forground bg-primary-forground text-primary px-3 py-1 rounded-full text-sm border border-primary/30"
       >
         {PERIOD}
       </span>
@@ -72,7 +72,7 @@ const {
           {
             "bg-gradient-to-r from-primary/10 to-transparent border border-primary/30":
               CURRENT,
-            "bg-black/40 backdrop-blur-sm border border-gray-800": !CURRENT,
+            "border dark:border-gray-50/30 border-gray-800/30": !CURRENT,
           },
           "hover:border-primary/50 transition-all duration-300 group hover:shadow-lg hover:shadow-primary/10",
         ]}
@@ -99,7 +99,7 @@ const {
               )
             }
             <h3
-              class={`text-xl font-bold mb-1 ${CURRENT ? "text-secondary" : "text-white"}`}
+              class={`text-xl font-bold mb-1 ${CURRENT ? "dark:text-primary-forground text-primary" : "dark:text-white text-black"}`}
             >
               {TITLE}
             </h3>
@@ -108,7 +108,7 @@ const {
 
           {
             CURRENT && (
-              <span class="absolute -top-8 -right-3 bg-secondary text-black px-3 py-1 rounded-full text-xs font-semibold animate-pulse-subtle">
+              <span class="absolute -top-8 -right-3 bg-secondary text-white px-3 py-1 rounded-full text-xs font-semibold animate-pulse-subtle">
                 Actual
               </span>
             )
