--- a/src/components/Newsletter.astro
+++ b/src/components/Newsletter.astro
@@ -22,21 +22,21 @@ if (Astro.request.method === "POST") {
   <div class="h-full pb-8">
     <form
       method="POST"
-      class="flex md:flex-row flex-col md:items-end my-16 gap-4"
+      class="flex md:flex-row flex-col md:items-center items-end my-16 gap-x-4"
     >
-      <div class="flex-1">
+      <div class="w-full">
         <label
-          for="email-address-icon"
-          class="block mb-2 text-sm font-medium text-white"
+          for="email"
+          class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
         >
-          Ingresa tu correo
+          Tu Email
         </label>
-        <div class="relative">
+        <div class="relative mb-6">
           <div
             class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none"
           >
             <svg
-              class="size-5 text-gray-400"
+              class="w-4 h-4 text-gray-500 dark:text-gray-400"
               aria-hidden="true"
               xmlns="http://www.w3.org/2000/svg"
               fill="currentColor"
@@ -53,14 +53,14 @@ if (Astro.request.method === "POST") {
           <input
             type="text"
             id="email"
-            name="email"
-            class="border rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5 bg-gray-700 border-gray-600 placeholder-gray-400 text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-            placeholder="tucorreo@gmail.com"
-            required
+            class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+            placeholder="name@gmail.com"
           />
         </div>
       </div>
-      <button class="bg-primary p-2.5 w-full md:max-w-1/4 rounded-lg">
+      <button
+        class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg w-full px-5 py-3 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800 md:max-w-1/4"
+      >
         subscribirme
       </button>
     </form>
