--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -34,7 +34,7 @@ const {
       class:list={["absolute inset-0 rounded-lg grid place-content-start p-4"]}
     >
       <div
-        class="flex items-center gap-2 border-2 border-white/50 px-2 py-1 rounded-full bg-black/30 backdrop-blur-md"
+        class="flex items-center gap-2 border-2 border-white/50 text-white px-2 py-1 rounded-full bg-black/30 backdrop-blur-md"
       >
         <svg
           xmlns="http://www.w3.org/2000/svg"
