--- a/src/components/pages/Article.astro
+++ b/src/components/pages/Article.astro
@@ -52,7 +52,7 @@ const { remarkPluginFrontmatter } = await render(Astro.props);
             {title}
           </h1>
           <p
-            class="font-medium mt-2 md:text-xl text-lg opacity-80"
+            class="font-light mt-2 md:text-xl text-lg opacity-80"
             set:text={description}
           />
           <div
@@ -99,7 +99,7 @@ const { remarkPluginFrontmatter } = await render(Astro.props);
       </div>
     </div>
     <div
-      class="md:px-0 px-5 prose prose-invert md:prose-lg prose-base mx-auto prose-h1:first:text-2xl prose-h1:md:first:text-4xl"
+      class="md:px-0 px-5 prose dark:prose-invert prose-gray md:prose-lg prose-base mx-auto prose-h1:first:text-2xl prose-h1:md:first:text-4xl"
     >
       <slot />
     </div>
