--- a/src/components/pages/Services.astro
+++ b/src/components/pages/Services.astro
@@ -3,7 +3,7 @@ import Layout from "@/layouts/Layout.astro";
 import Intro from "../partials/Intro.astro";
 ---
 
-<Layout title="">
+<Layout title="servicios">
   <main>
     <Intro />
   </main>
