--- a/src/components/partials/Services.astro
+++ b/src/components/partials/Services.astro
@@ -12,9 +12,9 @@ const i18n = getI18n({ currentLocale });
   title={i18n.SERVICES_TITLE}
   description={i18n.SERVICES_DESCRIPTION}
   tag={i18n.SERVICES_TAG}
-  class="hero"
+  class="hero grid md:grid-cols-3 grid-cols-1 md:gap-12 gap-6"
 >
-  <div class="grid md:grid-cols-3 grid-cols-1 gap-3">
+  <div class="md:col-span-2 grid md:grid-cols-2 grid-cols-1 gap-6">
     {
       i18n.SERVICES.map((service, i) => (
         <CardService {...service} custom={{ button: "Descubrir" }} index={i} />
