Refactor layout components for improved styling and structure, enhance topic page with better article presentation

--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -18,7 +18,9 @@ interface Props {
     <BaseHead {...Astro.props} />
     <ClientRouter />
   </head>
-  <body class="bg-black text-neutral-200 antialiased relative">
+  <body
+    class="dark:bg-neutral-900 bg-sky-50 dark:text-white text-black antialiased relative"
+  >
     <slot />
   </body>
 </html>
