--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,7 +16,7 @@ interface Props {
 ---
 
 <Base {...Astro.props}>
-  <div class="relative z-[1] text-white">
+  <div class="relative z-[1]">
     <Header />
     <slot />
     <Footer />
